log/build_2024-12-19_00-40-40/camera_main_pkg/stderr.log
  File "/home/achintya/Software/ROSPlayground/camera_ws_main/install/camera_main_pkg/lib/python3.10/site-packages/camera_main_pkg/controller.py", line 126
    main(
        ^
SyntaxError: '(' was never closed

